# arma-bench

./: Cargo.toml  Dockerfile  README.md  extension.sh
.github/workflows/: docker.yaml
client/: Cargo.toml
client/examples/compare/: main.rs
client/examples/execute/: main.rs
client/src/: client.rs  lib.rs
extension/: Cargo.toml
extension/src/: lib.rs
server/: Cargo.toml
server/src/: arma.rs  build.rs  lib.rs  main.rs
server/tests/: connect.rs
