[workspace]
resolver = "2"
members = [
    "client",
    "server",
    "extension",
]

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
cognitive_complexity = "allow"

[workspace.lints.rust]
future_incompatible = "warn"
nonstandard_style = "warn"

[workspace.dependencies]
arma-rs = "=1.11.4"
rmp-serde = "1.3.0"
serde = "1.0.210"
serde_json = "1.0.128"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = "1.10.0"

tokio = { version = "1.40.0" }
